--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "An application that handles all basketball related sotware for the Cougars Basketball Team",
   "main": "index.js",
   "scripts": {
-    "test": "env $(cat .env | grep -v \"#\" | xargs) jest --coverage"
+    "test": "env $(cat .env | grep -v \"#\" | xargs) jest --testPathPattern=getNextGame --coverage"
   },
   "author": "Kristian Walsh",
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.10",
+    "@types/sqlite3": "^3.1.8",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "eslint": "^8.36.0",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
-    "googleapis": "^105.0.0"
+    "googleapis": "^105.0.0",
+    "sqlite3": "^5.1.6"
   }
 }
