--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "Kristian Walsh",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^29.5.3",
     "@types/node": "^18.15.10",
+    "@types/pg": "^8.10.2",
     "@types/sqlite3": "^3.1.8",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
@@ -19,13 +20,19 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.5.0",
-    "ts-jest": "^29.0.5",
+    "jest": "^29.6.1",
+    "prettier": "^3.0.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.0.2"
   },
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
+    "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "googleapis": "^105.0.0",
+    "kysely": "^0.26.1",
+    "pg": "^8.11.1",
     "sqlite3": "^5.1.6"
   }
 }
