--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "An application that handles all basketball related sotware for the Cougars Basketball Team",
   "main": "index.js",
   "scripts": {
-    "test": "env $(cat .env | grep -v \"#\" | xargs) jest --testPathPattern=getNextGame --coverage"
+    "build": "npx tsc",
+    "start": "node build/cougarbot/api/cougarbotApi.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/cougarbot/api/cougarbotApi.js\"",
+    "test": "env $(cat .env | grep -v \"#\" | xargs) jest --testPathPattern=getNextGame --coverage",
+    "setup-db": "node build/cougarbot/db/setupTeam.js",
+    "get-next-game": "npx ts-node src/main.ts"
   },
   "author": "Kristian Walsh",
   "license": "ISC",
@@ -15,21 +20,27 @@
     "@types/sqlite3": "^3.1.8",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
+    "concurrently": "^8.2.2",
     "eslint": "^8.36.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.6.1",
+    "nodemon": "^3.0.1",
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.2"
   },
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
+    "@types/express": "^4.17.21",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "googleapis": "^105.0.0",
     "kysely": "^0.26.1",
     "pg": "^8.11.1",
